--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="../common/jslib/jquery.min.js"></script>
     <script type="text/javascript" src="../common/jslib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular.min.js"></script>
-    <script type="text/javascript" src="../common/jslib/lodash.compat.js"></script>
+    <script type="text/javascript" src="../common/jslib/lodash.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-resource.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-route.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-animate.min.js"></script>
@@ -85,7 +85,6 @@
     <script type="text/javascript" src="../common/modules/authorization/authorization.js"></script>
 
     <!-- User -->
-    <script type="text/javascript" src="../common/modules/user/user.js"></script>
     <script type="text/javascript" src="../common/modules/user/userModel.js"></script>
     <script type="text/javascript" src="../common/modules/user/userAccessLevels.js"></script>
     <script type="text/javascript" src="../common/modules/user/roleparser.js"></script>
