--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -24,7 +24,6 @@
     <!-- app js-->
     <script type="text/javascript" src="valintaperusteet.js"></script>
     <script type="text/javascript" src="valintaperusteet-resources.js"></script>
-    <script type="text/javascript" src="myroles.js"></script>
     <script type="text/javascript" src="routes.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioUtility.js"></script>
     <script type="text/javascript" src="valintaryhmalistaus/valintaryhmaHakukohdeTree.js"></script>
@@ -42,6 +41,7 @@
     <script type="text/javascript" src="jarjestyskriteeri/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="organisaatio/organisaatioTreeModel.js"></script>
     <script type="text/javascript" src="haku/hakumodel.js"></script>
+    <script type="text/javascript" src="user/userpagecontroller.js"></script>
     <script type="text/javascript" src="../common/js/utils.js"></script>
     <script type="text/javascript" src="../common/js/directives.js"></script>
     <script type="text/javascript" src="../common/js/modal.js"></script>
@@ -82,17 +82,13 @@
     <script type="text/javascript" src="../common/modules/lodash/lodash-module.js"></script>
 
     <!-- Authorization -->
-    <script type="text/javascript" src="../common/modules/authorization/authorization.js"></script>
+    <script type="text/javascript" src="../common/modules/authorization/directives.js"></script>
     <script type="text/javascript" src="../common/modules/authorization/authservice.js"></script>
-    <script type="text/javascript" src="../common/modules/authorization/userpagecontroller.js"></script>
-
-    <!-- User -->
+    <script type="text/javascript" src="../common/modules/authorization/constants.js"></script>
     <script type="text/javascript" src="../common/modules/authorization/userModel.js"></script>
-    <script type="text/javascript" src="../common/modules/authorization/userAccessLevels.js"></script>
-    <script type="text/javascript" src="../common/modules/authorization/roleservice.js"></script>
-
-
-
+    <script type="text/javascript" src="user/userAccessLevels.js"></script>
+    <script type="text/javascript" src="../common/modules/authorization/roleparser.js"></script>
+    <script type="text/javascript" src="../common/modules/authorization/myroles.js"></script>
 
 
     <!--Virkailija layout script -->
