--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -43,13 +43,15 @@
     <script type="text/javascript" src="haku/hakumodel.js"></script>
     <script type="text/javascript" src="auth/userpagecontroller.js"></script>
     <script type="text/javascript" src="auth/userModel.js"></script>
+    <script type="text/javascript" src="auth/authservice.js"></script>
+    <script type="text/javascript" src="auth/directives.js"></script>
     <script type="text/javascript" src="auth/userAccessLevels.js"></script>
+    <script type="text/javascript" src="authenticationservices.js"></script>
     <script type="text/javascript" src="../common/js/utils.js"></script>
     <script type="text/javascript" src="../common/js/directives.js"></script>
     <script type="text/javascript" src="../common/js/modal.js"></script>
     <script type="text/javascript" src="../common/js/filters.js"></script>
     <script type="text/javascript" src="../common/js/ng-breadcrumbs.js"></script>
-    <script type="text/javascript" src="../common/js/localisation.js"></script>
     <script type="text/javascript" src="../common/js/valintaryhmapuuvalitsincontroller.js"></script>
 
     <script type="text/javascript" src="laskentakaavat/laskentakaavaresources.js"></script>
@@ -83,12 +85,13 @@
     <!-- Lodash -->
     <script type="text/javascript" src="../common/modules/lodash/lodash-module.js"></script>
 
-    <!-- Authorization -->
-    <script type="text/javascript" src="auth/authservice.js"></script>
-    <script type="text/javascript" src="auth/directives.js"></script>
-    <script type="text/javascript" src="../common/modules/roleparser/constants.js"></script>
-    <script type="text/javascript" src="../common/modules/roleparser/roleparser.js"></script>
-    <script type="text/javascript" src="myroles.js"></script>
+    <!-- Roleparser -->
+    <script type="text/javascript" src="../common/modules/oph-roles/roleparser.js"></script>
+    <script type="text/javascript" src="../common/modules/oph-roles/roleservice.js"></script>
+    <script type="text/javascript" src="../common/modules/oph-roles/constants.js"></script>
+    <script type="text/javascript" src="../common/modules/oph-roles/myroles.js"></script>
+
+    <script type="text/javascript" src="../common/modules/oph.localisation/localisation.js"></script>
 
 
     <!--Virkailija layout script -->
