Osakoefunktioon myös yo-kokeet

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -507,7 +507,7 @@ YHTASUURI
             <td ng-click="addFunktio(parent, 'KONVERTOILUKUARVO', funktioSlotIndex); showNewFunktioList.visible = false">
                 <span>{{ t('laskentakaavapuu.konversio') || 'Konversio' }}</span></td>
             <td ng-click="addFunktio(parent, 'HAEOSAKOEARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
-                <span>{{ t('laskentakaavapuu.yoosakoearvosana') || 'YO-osakoearvosana' }}</span>
+                <span>{{ t('laskentakaavapuu.yoosakoearvosana') || 'YO-kokeen pisteet' }}</span>
             </td>
         </tr>
         <tr>
