--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/puu/laskentakaavapuu.html
@@ -312,8 +312,9 @@
         <span class="icon" ng-click="funktiowrapper.open = funktiowrapper.open ? false : true">&nbsp;</span>
         <funktiokutsu-label>
             <span add-class-on-mouseover="bold" class="node"
-              ng-click="showFunktiokutsuTools()">{{funktionimiService.getName(funktiowrapper.lapsi.funktionimi)}} <span
-                ng-if="funktiowrapper.lapsi.syoteparametrit[0].avain === 'hylkaysperustekuvaus_FI' && funktiowrapper.lapsi.syoteparametrit[0].arvo">- {{funktiowrapper.lapsi.syoteparametrit[0].arvo}}</span></span>
+              ng-click="showFunktiokutsuTools()">{{funktionimiService.getName(funktiowrapper.lapsi.funktionimi)}}
+                <span ng-if="getSyoteparametriArvo(funktiowrapper.lapsi.syoteparametrit, 'hylkaysperustekuvaus_FI')"> ({{getSyoteparametriArvo(funktiowrapper.lapsi.syoteparametrit, 'hylkaysperustekuvaus_FI')}})</span>
+            </span>
         </funktiokutsu-label>
     </div>
 </script>
