--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -281,8 +281,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-md-2" for="tayttojono">{{ t('valintatapajono.josjonoon') || 'Jos jonoon jää täyttämättömiä aloituspaikkoja, niitä täytetään
-                jonosta' }}</label>
+            <label class="control-label col-md-2" for="tayttojono">{{ t('valintatapajono.josjonoon') || 'Jos jonoon jää täyttämättömiä aloituspaikkoja, aloituspaikat siirretään jonoon' }}</label>
 
             <div class="col-md-4">
                 <select class="form-control" id="tayttojono" ng-model="model.valintatapajono.tayttojono"
