--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -1,5 +1,5 @@
 <!-- Arvojen syöttö -templatet -->
-<script type="text/ng-template" id="desimaaliluku-template">
+<script type="text/ng-template" id="desimaaliluku-template" xmlns="http://www.w3.org/1999/html">
     <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" type="text" size="15" ng-model="syoteparametri.arvo"/>
 </script>
 <script type="text/ng-template" id="kokonaisluku-template">
@@ -127,16 +127,31 @@
 
             <div class="form-group" ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'">
 
-                <label class="col-md-2 control-label">{{ t('laskentakaavaviiteasetuksetmodal.vaatiiOsallistumisen') || 'Vaatii
-                    osallistumisen' }}</label>
+                <label class="col-md-2 control-label">{{ t('laskentakaavaviiteasetuksetmodal.tiedonSyotettavyys') || 'Tiedon syötettävyys' }}</label>
 
-                <div class="col-md-10">
-                    <div class="checkbox">
-                        <label>
-                            <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg" type="checkbox"
-                           ng-model="valintaperuste.vaatiiOsallistumisen"/>
-                        </label>
-                    </div>
+                <div class="col-md-10" ng-init="valintaperuste.syotettavissa='KAIKILLE'">
+                    <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg"  type="radio" name="syotettavissa" value="KAIKILLE" ng-model="valintaperuste.syotettavissa">
+                    {{ t('laskentakaavaviiteasetuksetmodal.kaikille') || 'Kaikille' }}
+                    </input>
+                    <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg"  type="radio" name="syotettavissa" value="VALINTAKOELASKENNAN_PERUSTEELLA" ng-model="valintaperuste.syotettavissa">
+                    {{ t('laskentakaavaviiteasetuksetmodal.valintakoelaskennanPerusteella') || 'Valintakoelaskennan perusteella' }}
+                    </input>
+                </div>
+
+            </div>
+
+            <div class="form-group" ng-iinit="valintaperuste.lahde === 'SYOTETTAVA_ARVO'">
+
+                <label class="col-md-2 control-label">{{ t('laskentakaavaviiteasetuksetmodal.osallistumistieto') || 'Osallistumistieto' }}</label>
+
+                <div class="col-md-10" ng-init="valintaperuste.osallistumistiedonVaikutus='VAIKUTTAA_LASKENTAAN'">
+                    <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg"  type="radio" name="osallistumistieto" value="VAIKUTTAA_LASKENTAAN" ng-model="valintaperuste.osallistumistiedonVaikutus">
+                    {{ t('laskentakaavaviiteasetuksetmodal.vaikuttaaLaskentaan') || 'Vaikuttaa laskentaan' }}
+                    </input>
+                    <br/>
+                    <input ng-disabled="alikaavaValues.isAlikaava || !userAccess.updateOrg"  type="radio" name="osallistumistieto" value="EI_VAIKUTA_LASKENTAAN" ng-model="valintaperuste.osallistumistiedonVaikutus">
+                    {{ t('laskentakaavaviiteasetuksetmodal.eiVaikutaLaskentaan') || 'Ei vaikuta laskentaan' }}
+                    </input>
                 </div>
 
             </div>
