--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="form-group" ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'">
+            <div class="form-group" ng-if="valintaperuste.lahde.indexOf('SYOTETTAVA_ARVO') >= 0">
 
                 <label class="col-md-2 control-label">{{ t('laskentakaavaviiteasetuksetmodal.tiedonSyotettavyys') || 'Tiedon syötettävyys' }}</label>
 
@@ -140,7 +140,7 @@
 
             </div>
 
-            <div class="form-group" ng-if="valintaperuste.lahde === 'SYOTETTAVA_ARVO'">
+            <div class="form-group" ng-if="valintaperuste.lahde.indexOf('SYOTETTAVA_ARVO') >= 0">
 
                 <label class="col-md-2 control-label">{{ t('laskentakaavaviiteasetuksetmodal.osallistumistieto') || 'Osallistumistieto' }}</label>
 
