--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -65,11 +65,11 @@
                             <span ng-if="!jono.inheritance">{{t('valintaperusteet.periytyy.false') || 'Ei periydy'}}</span>
                         </td>
                         <td>
-                            <button auth ng-disabled="!userAccess.crudOrg" ng-show="!jono.inheritance" class="btn btn-sm btn-default"
+                            <a auth ng-disabled="!userAccess.crudOrg" ng-show="!jono.inheritance" class="btn btn-sm btn-default"
                                     ng-click="model.remove(jono)">
                                 <i
                                    class="fa fa-trash-o"
-                                        ></i></button>
+                                        ></i></a>
 
                         </td>
                     </tr>
@@ -82,9 +82,9 @@
 
         <div class="form-group" ng-show="model.valinnanvaihe.oid">
             <div class="col-md-2 col-md-offset-2">
-                <button auth ng-disabled="!userAccess.crudOrg" class="btn btn-sm btn-default" ng-click="addJono()"><i
+                <a auth ng-disabled="!userAccess.crudOrg" class="btn btn-sm btn-default" ng-click="addJono()"><i
                         class="fa fa-plus"></i> {{ t('valinnanvaihelomake.jono') || 'Jono' }}
-                </button>
+                </a>
             </div>
         </div>
 
