--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -280,7 +280,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group" ng-if="hakukohdeOid">
             <label class="control-label col-md-2" for="tayttojono">{{ t('valintatapajono.josjonoon') || 'Jos jonoon jää täyttämättömiä aloituspaikkoja, aloituspaikat siirretään jonoon' }}</label>
 
             <div class="col-md-4">
