show kutsutaankaikki only if kutsun kohde is not hakijan valitsema hakukohde

--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -51,8 +51,7 @@
                        ng-model="model.valintakoe.lahetetaankoKoekutsut"/>
             </div>
         </div>
-
-        <div class="form-group">
+        <div class="form-group" ng-show="model.valintakoe.kutsunKohde != 'HAKIJAN_VALINTA'">
             <label class="control-label col-md-2" for="kutsutaankoKaikki">{{ t('valintakoelomake.kutsutaanko') ||
                 'Kutsutaanko
                 kaikki' }}</label>
