--- a/src/main/webapp/app/valintakoe/valintakoelomake.html
+++ b/src/main/webapp/app/valintakoe/valintakoelomake.html
@@ -96,7 +96,7 @@
                 </select>
                 <br />
 
-                <label>Vapaamuotoinen tunniste</label>
+                <label>Tunniste</label>
                 <div>{{model.valintakoe.kutsunKohdeAvain}}</div>
                 <br/>
 
@@ -105,7 +105,7 @@
                      ng-repeat="avain in model.lisakysymysAvaimet | filter: { key : model.valintakoe.kutsunKohdeAvain } "
                      ng-init="model.showExpand = (avain.options.length > 3)">
                     <span ng-repeat="option in avain.options">
-                        {{option.text}} ({{option.id}})<br/>
+                        ({{option.id}}) {{option.text}}<br/>
                     </span>
                 </div>
                 <div ng-show="model.showExpand">
